--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+# config port and host
+server.port=8048
+server.address=localhost
+#debug=true
+#logging.level.org.springframework:DEBUG
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+## https://ittone.ma/ittone/java-spring-boot-is-not-creating-tables-automatically/
+## https://stackoverflow.com/questions/67678311/spring-boot-is-not-creating-tables-automatically
+spring.jpa.defer-datasource-initialization=true
