--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # config port and host
 server.port=8048
 server.address=localhost
-debug=true
+#debug=true
 #logging.level.org.springframework:DEBUG
 
 spring.datasource.driver-class-name=org.h2.Driver
