--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
 <!--		<junit.version>4.13.2</junit.version>-->
 		<java-jwt.version>3.18.2</java-jwt.version>
+		<slf4j-log4j12.version>2.0.0-alpha5</slf4j-log4j12.version>
 	</properties>
 
 	<dependencies>
@@ -71,6 +72,14 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j-log4j12.version}</version>
 			<scope>test</scope>
 		</dependency>
 
