--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 server.port=8048
 server.address=localhost
 #debug=true
-#logging.level.org.springframework:DEBUG
+logging.level.org.springframework=INFO
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.context=DEBUG
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
