--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<!--<java.version>17</java.version>-->
 		<java-jwt.version>3.18.2</java-jwt.version>
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
