--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 server.port=8048
 server.address=localhost
 #debug=true
-logging.level.org.springframework=INFO
+logging.level.com.example.demo=DEBUG
+#logging.level.org.springframework=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.context=DEBUG
 
